[package]
name = "near-intents"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mosaik = { git = "https://github.com/zmanian/mosaik", branch = "feature/dynamic-predicate-reevaluation" }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
rand = "0.9"
